--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@babel/types": "^7.10.4",
     "@types/jest": "^26.0.4",
     "@types/loader-utils": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
     "jest": "^26.1.0",
     "loader-utils": "^2.0.0",
     "rollup": "^2.21.0",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^26.1.1",
