--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "module-hide-loader",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "demo",
-  "main": "dist/main.js",
+  "main": "lib/bundle.cjs.js",
   "types": "dist/main.d.ts",
-  "module": "dist/main.js",
+  "module": "lib/bundle.esm.js",
   "scripts": {
     "build": "rollup -c",
     "test": "jest --no-cache"
@@ -17,7 +17,7 @@
     "webpack-loader"
   ],
   "author": "chrislee",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ChrisLee0211/module-remover/issues"
   },
@@ -35,7 +35,10 @@
     "jest": "^26.1.0",
     "loader-utils": "^2.0.0",
     "rollup": "^2.21.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^26.1.1",
