--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "module-hide-loader",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "demo",
   "main": "lib/bundle.cjs.js",
   "types": "dist/main.d.ts",
   "module": "lib/bundle.esm.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache --coverage"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "jest": "^26.1.0",
     "loader-utils": "^2.0.0",
     "rollup": "^2.21.0",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-commonjs": "^9.1.1",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
