--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
   },
   "homepage": "https://github.com/ChrisLee0211/module-remover#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
     "@babel/generator": "^7.10.4",
     "@babel/parser": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@babel/traverse": "^7.10.4",
     "@babel/types": "^7.10.4",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-typescript": "^3.0.0",
     "@types/jest": "^26.0.4",
     "@types/loader-utils": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
@@ -35,12 +40,10 @@
     "jest": "^26.1.0",
     "loader-utils": "^2.0.0",
     "rollup": "^2.21.0",
-    "rollup-plugin-commonjs": "^9.1.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.2",
-    "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^26.1.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
