--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "@babel/module-remover",
-  "version": "0.0.1",
+  "name": "babel-plugin-module-remover",
+  "version": "0.1.1",
   "description": "A babel plugin can remove the specified module",
   "main": "lib/bundle.cjs.js",
   "types": "dist/main.d.ts",
   "module": "lib/bundle.esm.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ChrisLee0211/babel-module-remover.git"
@@ -27,11 +23,6 @@
   },
   "homepage": "https://github.com/ChrisLee0211/babel-module-remover#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/generator": "^7.10.4",
-    "@babel/parser": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/traverse": "^7.10.4",
     "@babel/types": "^7.10.4",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
@@ -53,9 +44,6 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@babel/generator": "^7.10.4",
-    "@babel/parser": "^7.10.4",
-    "@babel/traverse": "^7.10.4",
     "@babel/types": "^7.10.4"
   }
 }
